[tool.poetry]
name = "spy-sb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
bs4 = "^0.0.1"
colorama = "^0.4.4"
gtts = "^2.2.2"
utils = "^1.0.1"
jishaku = "^1.20.0"
pypresence = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
